examples/test/testpolicy3188.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3188
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key20: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value12
          key2: value36
          key38: value0
      podSelector:
        matchLabels:
          key42: value24
